--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{461EF48B-BBEB-4A4C-9968-66ACE8D3D43D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CHAOS.MCM</RootNamespace>
-    <AssemblyName>CHAOS.MCM</AssemblyName>
+    <RootNamespace>Chaos.Mcm</RootNamespace>
+    <AssemblyName>Chaos.Mcm</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,17 +30,33 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CHAOS, Version=1.0.4687.26568, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\..\lib\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.6.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data.Entity, Version=6.6.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\MySql.Data.Entity.dll</HintPath>
+    </Reference>
     <Reference Include="Portal">
       <HintPath>..\..\..\lib\Portal.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -75,8 +93,30 @@
     <Compile Include="Data\Dto\Standard\ObjectRelationType.cs" />
     <Compile Include="Data\Dto\Standard\ObjectType.cs" />
     <Compile Include="Data\Dto\Standard\Permission.cs" />
+    <Compile Include="Data\EF\ExtensionMethods.cs" />
+    <Compile Include="Data\EF\MCM.Designer.cs">
+      <DependentUpon>MCM.edmx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Data\EF\MCMEntities.cs" />
+    <Compile Include="Data\EF\McmRepository.cs" />
+    <Compile Include="Data\EF\Object.cs" />
+    <Compile Include="Data\EF\PermissionRepository.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
     <Compile Include="Data\IPermissionRepository.cs" />
+    <Compile Include="Exception\FolderNotEmptyException.cs" />
+    <Compile Include="Exception\InvalidRevisionException.cs" />
+    <Compile Include="Exception\ObjectRelationAlreadyExistException.cs" />
+    <Compile Include="Extension\AMcmExtension.cs" />
+    <Compile Include="Extension\File.cs" />
+    <Compile Include="Extension\Folder.cs" />
+    <Compile Include="Extension\Format.cs" />
+    <Compile Include="Extension\Mcm.cs" />
+    <Compile Include="Extension\MetadataSchema.cs" />
+    <Compile Include="Extension\Object.cs" />
+    <Compile Include="Extension\ObjectType.cs" />
+    <Compile Include="Extension\UserProfile.cs" />
     <Compile Include="Permission\AccessPointPermission.cs" />
     <Compile Include="Permission\FolderPermissionExtensions.cs" />
     <Compile Include="Permission\InMemory\Folder.cs" />
@@ -88,6 +128,15 @@
     <Compile Include="Permission\MetadataSchemaPermission.cs" />
     <Compile Include="Permission\Specification\IntervalSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EntityDeploy Include="Data\EF\MCM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>MCM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
