--- a/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
+++ b/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
@@ -33,6 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Chaos.Deployment.UI.Console">
+      <HintPath>..\..\..\tools\chaos.deployment\Chaos.Deployment.UI.Console.exe</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.4.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\app\CHAOS.MCM\bin\Debug\MySql.Data.dll</HintPath>
@@ -43,9 +46,12 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Connection\MySql\StoredProceduresTest.cs" />
+    <Compile Include="Data\Connection\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +63,11 @@
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="App.Config.sample" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="integraion_tests_base_data.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
