Refactored Metadata Set on McmRepository to use all arguments instead of a dto Created the foundation for the new metadata set extension (Test is created)

--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension\FolderTest.cs" />
+    <Compile Include="Extension\MetadataTest.cs" />
     <Compile Include="Extension\ObjectRelationTest.cs" />
     <Compile Include="Extension\TestBase.cs" />
     <Compile Include="Permission\InMemoryPermissionManagerTest.cs" />
