--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Data\Connection\IKeyValueMapper.cs" />
     <Compile Include="Data\Connection\McmRepository.cs" />
     <Compile Include="Data\Connection\MySql\Gateway.cs" />
+    <Compile Include="Data\Connection\PermissionRepository.cs" />
     <Compile Include="Data\Connection\ReaderExtensions.cs" />
     <Compile Include="Data\Dto\IAccessPoint.cs" />
     <Compile Include="Data\Dto\IObject.cs" />
@@ -109,7 +110,6 @@
     </Compile>
     <Compile Include="Data\EF\MCMEntities.cs" />
     <Compile Include="Data\EF\Object.cs" />
-    <Compile Include="Data\EF\PermissionRepository.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
     <Compile Include="Data\IPermissionRepository.cs" />
     <Compile Include="Exception\FolderNotEmptyException.cs" />
