--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -128,16 +128,17 @@
     <Compile Include="Exception\InvalidRevisionException.cs" />
     <Compile Include="Exception\ObjectRelationAlreadyExistException.cs" />
     <Compile Include="Extension\AMcmExtension.cs" />
+    <Compile Include="Extension\Destination.cs" />
     <Compile Include="Extension\File.cs" />
     <Compile Include="Extension\Folder.cs" />
     <Compile Include="Extension\Format.cs" />
+    <Compile Include="Extension\Link.cs" />
     <Compile Include="Extension\Mcm.cs" />
     <Compile Include="Extension\Metadata.cs" />
     <Compile Include="Extension\MetadataSchema.cs" />
     <Compile Include="Extension\Object.cs" />
     <Compile Include="Extension\ObjectRelation.cs" />
     <Compile Include="Extension\ObjectType.cs" />
-    <Compile Include="Extension\UserProfile.cs" />
     <Compile Include="Permission\AccessPointPermission.cs" />
     <Compile Include="Permission\FolderPermissionExtensions.cs" />
     <Compile Include="Permission\InMemory\Folder.cs" />
