--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -62,7 +62,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding\MetadataBinding.cs" />
-    <Compile Include="Data\Connection\IKeyValueMapper.cs" />
     <Compile Include="Data\Connection\IReaderMapping.cs" />
     <Compile Include="Data\Connection\Mapping\AccesspointObjectJoinMapping.cs" />
     <Compile Include="Data\Connection\Mapping\ObjectFolderMapping.cs" />
@@ -72,19 +71,15 @@
     <Compile Include="Data\Connection\Mapping\ObjectMapping.cs" />
     <Compile Include="Data\Connection\Mapping\MetadataMapping.cs" />
     <Compile Include="Data\Connection\Mapping\ObjectRelationInfoMapping.cs" />
-    <Compile Include="Data\Connection\McmRepository.cs" />
     <Compile Include="Data\Connection\MySql\Gateway.cs" />
-    <Compile Include="Data\Connection\PermissionRepository.cs" />
     <Compile Include="Data\Connection\ReaderExtensions.cs" />
-    <Compile Include="Data\Dto\IAccessPoint.cs" />
-    <Compile Include="Data\Dto\IObject.cs" />
-    <Compile Include="Data\Dto\NewMetadata.cs" />
-    <Compile Include="Data\Dto\NewObject.cs" />
+    <Compile Include="Data\Dto\AccessPoint.cs" />
+    <Compile Include="Data\Dto\Metadata.cs" />
+    <Compile Include="Data\Dto\Object.cs" />
     <Compile Include="Data\Dto\ObjectFolder.cs" />
     <Compile Include="Data\Dto\ObjectMetadata.cs" />
     <Compile Include="Data\Dto\ObjectRelation.cs" />
     <Compile Include="Data\Dto\ObjectRelationInfo.cs" />
-    <Compile Include="Data\Dto\Standard\AccessPoint.cs" />
     <Compile Include="Data\Dto\Standard\AccessPoint_Object_Join.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchemaInfo.cs" />
     <Compile Include="Data\Dto\Standard\DestinationInfo.cs" />
@@ -107,23 +102,14 @@
     <Compile Include="Data\Dto\IFolderUserJoin.cs" />
     <Compile Include="Data\Dto\Standard\Language.cs" />
     <Compile Include="Data\Dto\Standard\Link.cs" />
-    <Compile Include="Data\Dto\Standard\Metadata.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchema.cs" />
-    <Compile Include="Data\Dto\Standard\Object.cs" />
-    <Compile Include="Data\Dto\Standard\ObjectObjectJoin.cs" />
     <Compile Include="Data\Dto\Standard\ObjectRelationType.cs" />
     <Compile Include="Data\Dto\Standard\ObjectType.cs" />
     <Compile Include="Data\Dto\Standard\Permission.cs" />
-    <Compile Include="Data\EF\ExtensionMethods.cs" />
-    <Compile Include="Data\EF\MCM.Designer.cs">
-      <DependentUpon>MCM.edmx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Data\EF\MCMEntities.cs" />
-    <Compile Include="Data\EF\Object.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
     <Compile Include="Data\IPermissionRepository.cs" />
+    <Compile Include="Data\McmRepository.cs" />
+    <Compile Include="Data\PermissionRepository.cs" />
     <Compile Include="Exception\FolderNotEmptyException.cs" />
     <Compile Include="Exception\InvalidRevisionException.cs" />
     <Compile Include="Exception\ObjectRelationAlreadyExistException.cs" />
@@ -150,12 +136,6 @@
     <Compile Include="Permission\MetadataSchemaPermission.cs" />
     <Compile Include="Permission\Specification\IntervalSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EntityDeploy Include="Data\EF\MCM.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MCM.Designer.cs</LastGenOutput>
-    </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config.sample" />
