Added Serialize Attributes to properties in the Object class and it's related classes

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -74,18 +74,18 @@
     <Compile Include="Data\Connection\MySql\Gateway.cs" />
     <Compile Include="Data\Connection\ReaderExtensions.cs" />
     <Compile Include="Data\Dto\AccessPoint.cs" />
+    <Compile Include="Data\Dto\ObjectAccessPoint.cs" />
+    <Compile Include="Data\Dto\FileInfo.cs" />
     <Compile Include="Data\Dto\Metadata.cs" />
     <Compile Include="Data\Dto\Object.cs" />
     <Compile Include="Data\Dto\ObjectFolder.cs" />
     <Compile Include="Data\Dto\ObjectMetadata.cs" />
     <Compile Include="Data\Dto\ObjectRelation.cs" />
     <Compile Include="Data\Dto\ObjectRelationInfo.cs" />
-    <Compile Include="Data\Dto\Standard\AccessPoint_Object_Join.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchemaInfo.cs" />
     <Compile Include="Data\Dto\Standard\DestinationInfo.cs" />
     <Compile Include="Data\Dto\Standard\EntityPermission.cs" />
     <Compile Include="Data\Dto\Standard\File.cs" />
-    <Compile Include="Data\Dto\Standard\FileInfo.cs" />
     <Compile Include="Data\Dto\Standard\Folder.cs" />
     <Compile Include="Data\Dto\Standard\FolderGroupJoin.cs" />
     <Compile Include="Data\Dto\Standard\FolderInfo.cs" />
