--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Binding\MetadataBinding.cs" />
     <Compile Include="Data\Connection\IReaderMapping.cs" />
     <Compile Include="Data\Connection\Mapping\AccesspointObjectJoinMapping.cs" />
+    <Compile Include="Data\Connection\Mapping\Copy of AccesspointObjectJoinMapping.cs" />
     <Compile Include="Data\Connection\Mapping\FormatMapping.cs" />
     <Compile Include="Data\Connection\Mapping\FolderMapping.cs" />
     <Compile Include="Data\Connection\Mapping\ObjectFolderMapping.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Data\Dto\ObjectMetadata.cs" />
     <Compile Include="Data\Dto\ObjectRelation.cs" />
     <Compile Include="Data\Dto\ObjectRelationInfo.cs" />
+    <Compile Include="Data\Dto\ObjectType.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchemaInfo.cs" />
     <Compile Include="Data\Dto\Standard\DestinationInfo.cs" />
     <Compile Include="Data\Dto\Standard\EntityPermission.cs" />
@@ -106,7 +108,6 @@
     <Compile Include="Data\Dto\Standard\Link.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchema.cs" />
     <Compile Include="Data\Dto\Standard\ObjectRelationType.cs" />
-    <Compile Include="Data\Dto\Standard\ObjectType.cs" />
     <Compile Include="Data\Dto\Standard\Permission.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
     <Compile Include="Data\IPermissionRepository.cs" />
