--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Binding\MetadataBinding.cs" />
     <Compile Include="Data\Connection\IReaderMapping.cs" />
     <Compile Include="Data\Connection\Mapping\AccesspointObjectJoinMapping.cs" />
+    <Compile Include="Data\Connection\Mapping\FolderPermissionMapping.cs" />
     <Compile Include="Data\Connection\Mapping\MetadataSchemaMapping.cs" />
     <Compile Include="Data\Connection\Mapping\ObjectTypeMapping.cs" />
     <Compile Include="Data\Connection\Mapping\FormatMapping.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Data\Connection\MySql\Gateway.cs" />
     <Compile Include="Data\Connection\ReaderExtensions.cs" />
     <Compile Include="Data\Dto\AccessPoint.cs" />
+    <Compile Include="Data\Dto\FolderPermission.cs" />
     <Compile Include="Data\Dto\Format.cs" />
     <Compile Include="Data\Dto\MetadataSchema.cs" />
     <Compile Include="Data\Dto\ObjectAccessPoint.cs" />
@@ -96,7 +98,6 @@
     <Compile Include="Data\Dto\Standard\Folder.cs" />
     <Compile Include="Data\Dto\Standard\FolderGroupJoin.cs" />
     <Compile Include="Data\Dto\Standard\FolderInfo.cs" />
-    <Compile Include="Data\Dto\Standard\FolderPermission.cs" />
     <Compile Include="Data\Dto\Standard\FolderType.cs" />
     <Compile Include="Data\Dto\Standard\FolderUserJoin.cs" />
     <Compile Include="Data\Dto\Standard\FormatCategory.cs" />
