--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Data\Connection\IReaderMapping.cs" />
     <Compile Include="Data\Connection\Mapping\AccesspointObjectJoinMapping.cs" />
     <Compile Include="Data\Connection\Mapping\AccessPointMapping.cs" />
+    <Compile Include="Data\Connection\Mapping\DestinationInfoMapping.cs" />
     <Compile Include="Data\Connection\Mapping\FolderPermissionMapping.cs" />
     <Compile Include="Data\Connection\Mapping\MetadataSchemaMapping.cs" />
     <Compile Include="Data\Connection\Mapping\ObjectTypeMapping.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Data\Connection\MySql\Gateway.cs" />
     <Compile Include="Data\Connection\ReaderExtensions.cs" />
     <Compile Include="Data\Dto\AccessPoint.cs" />
+    <Compile Include="Data\Dto\DestinationInfo.cs" />
     <Compile Include="Data\Dto\FolderPermission.cs" />
     <Compile Include="Data\Dto\Format.cs" />
     <Compile Include="Data\Dto\MetadataSchema.cs" />
@@ -93,7 +95,6 @@
     <Compile Include="Data\Dto\ObjectRelationInfo.cs" />
     <Compile Include="Data\Dto\ObjectType.cs" />
     <Compile Include="Data\Dto\Standard\MetadataSchemaInfo.cs" />
-    <Compile Include="Data\Dto\Standard\DestinationInfo.cs" />
     <Compile Include="Data\Dto\Standard\EntityPermission.cs" />
     <Compile Include="Data\Dto\Standard\File.cs" />
     <Compile Include="Data\Dto\Standard\Folder.cs" />
