--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -37,15 +37,15 @@
     <Reference Include="CHAOS">
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
     </Reference>
+    <Reference Include="Chaos.Portal">
+      <HintPath>..\..\..\lib\Chaos.Portal.dll</HintPath>
+    </Reference>
     <Reference Include="Moq">
       <HintPath>..\..\..\tools\Moq.4.0.10827\NET40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\tools\NUnit-2.6.0.12051\bin\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="Portal">
-      <HintPath>..\..\..\lib\Portal.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
