Added Index method to McmExtension. It retrieves all objects from the database and run them against all Views.

--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Extension\FormatTest.cs" />
     <Compile Include="Extension\LinkTest.cs" />
     <Compile Include="Extension\MetadataSchemaTest.cs" />
+    <Compile Include="Extension\McmTest.cs" />
     <Compile Include="Extension\ObjectTest.cs" />
     <Compile Include="Extension\FolderTest.cs" />
     <Compile Include="Extension\MetadataTest.cs" />
