Added CH-232 Object/Delete now deletes the actual files referenced, if they have a S3 AccessProvider, in addtion to removing the reference in the database. Added CH-238 File/Delete removes the actual file if it have a S3 AccessProvider, in addtion to removing the reference in the database.

--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK">
+      <HintPath>..\..\..\lib\AWSSDK.dll</HintPath>
+    </Reference>
     <Reference Include="CHAOS">
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
     </Reference>
