Added AWSSDK.dll Updated gitingnore to allow new dlls in the lib folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,14 @@
 _ReSharper*
-
 bin
 !/tools/*/bin
 !/bin
-
+!/lib/*
 obj
-
 .DS_Store
-
 Thumbs.db
-
 *.user
-
 *.suo
-
 *.xap
-
 *.bak
 *.dat
 App.Config
