--- a/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
+++ b/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
@@ -39,7 +39,8 @@
     <Reference Include="Chaos.Deployment.UI.Console">
       <HintPath>..\..\..\tools\chaos.deployment\Chaos.Deployment.UI.Console.exe</HintPath>
     </Reference>
-    <Reference Include="Chaos.Portal">
+    <Reference Include="Chaos.Portal, Version=6.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\Chaos.Portal.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
