--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Extension\ObjectTypeTest.cs" />
     <Compile Include="Extension\TestBase.cs" />
     <Compile Include="Extension\UserManagementTest.cs" />
+    <Compile Include="Extension\UserProfileTest.cs" />
     <Compile Include="Permission\InMemoryPermissionManagerTest.cs" />
     <Compile Include="Permission\IntervalSpecificationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
