--- a/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
+++ b/src/test/Chaos.Mcm.IntegrationTest/Chaos.Mcm.IntegrationTest.csproj
@@ -69,9 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config.sample" />
-    <None Include="App.Config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.Config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="integraion_tests_base_data.sql">
