Object View created, with access points indexed

--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -70,9 +70,12 @@
     <Compile Include="Extension\TestBase.cs" />
     <Compile Include="Extension\UserManagementTest.cs" />
     <Compile Include="Extension\UserProfileTest.cs" />
+    <Compile Include="McmModuleTest.cs" />
     <Compile Include="Permission\InMemoryPermissionManagerTest.cs" />
     <Compile Include="Permission\IntervalSpecificationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="View\ObjectIndexTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Dto\" />
