--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Permission\MetadataSchemaPermission.cs" />
     <Compile Include="Permission\Specification\IntervalSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\ObjectView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config.sample" />
@@ -150,7 +151,6 @@
   <ItemGroup>
     <Folder Include="Binding\" />
     <Folder Include="Data\Connection\" />
-    <Folder Include="View\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
