--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -81,6 +81,7 @@
     <Folder Include="Data\Dto\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="App.Config.sample" />
   </ItemGroup>
   <ItemGroup>
